FIX: <td> spacing on expanded table (#26037)

--- a/app/assets/stylesheets/common/base/topic-post.scss
+++ b/app/assets/stylesheets/common/base/topic-post.scss
@@ -1743,6 +1743,10 @@ iframe {
       z-index: 1;
       background-color: var(--secondary);
     }
+
+    td {
+      padding: 5px 6px 5px 3px;
+    }
   }
 }
 
